Se continua avanzando con el proyecto y buenas practicas